1.0dev: fix ticket status vertical alignment.
git-svn-id: http://trac.edgewall.org/intertrac/log:/trunk@11153 af82e41b-90c4-0310-8c96-b1721e28e2e2

--- a/trac/htdocs/css/ticket.css
+++ b/trac/htdocs/css/ticket.css
@@ -55,11 +55,15 @@
  vertical-align: middle;
  margin: 0 .4em 0 0;
 }
-#ticket h2 .status {
+#ticket h2 .trac-status {
  vertical-align: middle;
 }
 #ticket h2 .trac-type {
  color: #955;
+ vertical-align: middle;
+}
+#ticket h2 .trac-resolution {
+ vertical-align: middle;
 }
 
 #ticket .date {
